<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_"
        android:textColor="@color/black"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        tools:text="@string/bod"
        android:textColor="@color/red"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_"
        android:hint="@string/put_login"
        android:minHeight="48dp"
        android:padding="7dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="310dp"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:layout_height="wrap_content"
        android:text="@string/description"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_"
        android:hint="@string/put_password"
        android:minHeight="48dp"
        android:padding="7dp"
        android:textColor="@color/black"
        android:inputType="textWebPassword" />

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_"
        android:hint="@string/put_password_escho"
        android:minHeight="48dp"
        android:padding="7dp"
        android:textColor="@color/black"
        android:inputType="textWebPassword"/>


    <Button
        android:id="@+id/reg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_btn"
        android:text="@string/registration" />


</LinearLayout>